# fbarcalc

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: default.yml
src/: calc.rs  cli.rs  config.rs  lib.rs  main.rs
